--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -85,9 +85,425 @@
    "execution_count": null,
    "id": "dd4e8cd8-a6f6-486c-a5c4-1745b0c035f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Customer          ST GENDER             Education Customer Lifetime Value  \\\n",
+      "0  RB50392  Washington    NaN                Master                     NaN   \n",
+      "1  QZ44356     Arizona      F              Bachelor              697953.59%   \n",
+      "2  AI49188      Nevada      F              Bachelor             1288743.17%   \n",
+      "3  WW63253  California      M              Bachelor              764586.18%   \n",
+      "4  GA49547  Washington      M  High School or Below              536307.65%   \n",
+      "\n",
+      "    Income  Monthly Premium Auto Number of Open Complaints     Policy Type  \\\n",
+      "0      0.0                1000.0                    1/0/00   Personal Auto   \n",
+      "1      0.0                  94.0                    1/0/00   Personal Auto   \n",
+      "2  48767.0                 108.0                    1/0/00   Personal Auto   \n",
+      "3      0.0                 106.0                    1/0/00  Corporate Auto   \n",
+      "4  36357.0                  68.0                    1/0/00   Personal Auto   \n",
+      "\n",
+      "   Vehicle Class  Total Claim Amount  \n",
+      "0  Four-Door Car            2.704934  \n",
+      "1  Four-Door Car         1131.464935  \n",
+      "2   Two-Door Car          566.472247  \n",
+      "3            SUV          529.881344  \n",
+      "4  Four-Door Car           17.269323  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "# set-up, load the dataset\n",
+    "\n",
+    "# dataset location:  https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv\"\n",
+    "data = pd.read_csv(url)\n",
+    "print(data.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b380c876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset dimensions:\n",
+      "(4008, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify the dimensions of the dataset \n",
+    "# by determining the number of rows and columns it contains.\n",
+    "print(\"Dataset dimensions:\")\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a67728d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data types of each column:\n",
+      "Customer                      object\n",
+      "ST                            object\n",
+      "GENDER                        object\n",
+      "Education                     object\n",
+      "Customer Lifetime Value       object\n",
+      "Income                       float64\n",
+      "Monthly Premium Auto         float64\n",
+      "Number of Open Complaints     object\n",
+      "Policy Type                   object\n",
+      "Vehicle Class                 object\n",
+      "Total Claim Amount           float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine the data types of each column \n",
+    "# and evaluate whether they are appropriate for the nature of the variable. \n",
+    "\n",
+    "print(\"\\nData types of each column:\")\n",
+    "print(data.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e948ed2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Unique values and ranges for each column:\n",
+      "\n",
+      "Column: Customer\n",
+      "Number of unique values: 1071\n",
+      "Categorical values:\n",
+      "Customer\n",
+      "MY31220    1\n",
+      "RB50392    1\n",
+      "QZ44356    1\n",
+      "AI49188    1\n",
+      "WW63253    1\n",
+      "          ..\n",
+      "FL50705    1\n",
+      "WC83389    1\n",
+      "OE15005    1\n",
+      "FV94802    1\n",
+      "BW63560    1\n",
+      "Name: count, Length: 1071, dtype: int64\n",
+      "\n",
+      "Column: ST\n",
+      "Number of unique values: 8\n",
+      "Categorical values:\n",
+      "ST\n",
+      "Oregon        320\n",
+      "California    211\n",
+      "Arizona       186\n",
+      "Cali          120\n",
+      "Nevada         98\n",
+      "Washington     81\n",
+      "WA             30\n",
+      "AZ             25\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column: GENDER\n",
+      "Number of unique values: 5\n",
+      "Categorical values:\n",
+      "GENDER\n",
+      "F         457\n",
+      "M         413\n",
+      "Male       39\n",
+      "female     28\n",
+      "Femal      17\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column: Education\n",
+      "Number of unique values: 6\n",
+      "Categorical values:\n",
+      "Education\n",
+      "Bachelor                324\n",
+      "College                 313\n",
+      "High School or Below    296\n",
+      "Master                   94\n",
+      "Doctor                   37\n",
+      "Bachelors                 7\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column: Customer Lifetime Value\n",
+      "Number of unique values: 1027\n",
+      "Categorical values:\n",
+      "Customer Lifetime Value\n",
+      "251459.20%    4\n",
+      "445811.34%    4\n",
+      "578018.22%    3\n",
+      "684615.03%    3\n",
+      "477294.38%    3\n",
+      "             ..\n",
+      "251753.36%    1\n",
+      "532667.77%    1\n",
+      "260027.21%    1\n",
+      "853479.28%    1\n",
+      "882883.50%    1\n",
+      "Name: count, Length: 1027, dtype: int64\n",
+      "\n",
+      "Column: Income\n",
+      "Number of unique values: 774\n",
+      "Numerical range:\n",
+      "Min: 0.0, Max: 99960.0\n",
+      "\n",
+      "Column: Monthly Premium Auto\n",
+      "Number of unique values: 132\n",
+      "Numerical range:\n",
+      "Min: 61.0, Max: 35354.0\n",
+      "\n",
+      "Column: Number of Open Complaints\n",
+      "Number of unique values: 6\n",
+      "Categorical values:\n",
+      "Number of Open Complaints\n",
+      "1/0/00    830\n",
+      "1/1/00    138\n",
+      "1/2/00     50\n",
+      "1/3/00     34\n",
+      "1/4/00     13\n",
+      "1/5/00      6\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column: Policy Type\n",
+      "Number of unique values: 3\n",
+      "Categorical values:\n",
+      "Policy Type\n",
+      "Personal Auto     780\n",
+      "Corporate Auto    234\n",
+      "Special Auto       57\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column: Vehicle Class\n",
+      "Number of unique values: 6\n",
+      "Categorical values:\n",
+      "Vehicle Class\n",
+      "Four-Door Car    576\n",
+      "Two-Door Car     205\n",
+      "SUV              199\n",
+      "Sports Car        57\n",
+      "Luxury SUV        20\n",
+      "Luxury Car        14\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Column: Total Claim Amount\n",
+      "Number of unique values: 761\n",
+      "Numerical range:\n",
+      "Min: 0.382107, Max: 2893.239678\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify the number of unique values for each column \n",
+    "# and determine which columns appear to be categorical. \n",
+    "# You should also describe the unique values of each categorical column \n",
+    "# and the range of values for numerical columns, and give your insights.\n",
+    "\n",
+    "print(\"\\nUnique values and ranges for each column:\")\n",
+    "for column in data.columns:\n",
+    "    unique_values = data[column].nunique()\n",
+    "    print(f\"\\nColumn: {column}\")\n",
+    "    print(f\"Number of unique values: {unique_values}\")\n",
+    "    if data[column].dtype == 'object':\n",
+    "        print(\"Categorical values:\")\n",
+    "        print(data[column].value_counts())\n",
+    "    else:\n",
+    "        print(\"Numerical range:\")\n",
+    "        print(f\"Min: {data[column].min()}, Max: {data[column].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "18a0b935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Summary statistics for numerical columns:\n",
+      "             Income  Monthly Premium Auto  Total Claim Amount\n",
+      "count   1071.000000           1071.000000         1071.000000\n",
+      "mean   39295.701214            193.234360          404.986909\n",
+      "std    30469.427060           1601.190369          293.027260\n",
+      "min        0.000000             61.000000            0.382107\n",
+      "25%    14072.000000             68.000000          202.157702\n",
+      "50%    36234.000000             83.000000          354.729129\n",
+      "75%    64631.000000            109.500000          532.800000\n",
+      "max    99960.000000          35354.000000         2893.239678\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Compute summary statistics such as mean, median, mode, standard deviation, \n",
+    "# and quartiles to understand the central tendency \n",
+    "# and distribution of the data for numerical columns. \n",
+    "# You should also provide your conclusions based on these summary statistics.\n",
+    "print(\"\\nSummary statistics for numerical columns:\")\n",
+    "print(data.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1543312e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Summary statistics for categorical columns:\n",
+      "\n",
+      "Column: Customer\n",
+      "count        1071\n",
+      "unique       1071\n",
+      "top       MY31220\n",
+      "freq            1\n",
+      "Name: Customer, dtype: object\n",
+      "\n",
+      "Column: ST\n",
+      "count       1071\n",
+      "unique         8\n",
+      "top       Oregon\n",
+      "freq         320\n",
+      "Name: ST, dtype: object\n",
+      "\n",
+      "Column: GENDER\n",
+      "count     954\n",
+      "unique      5\n",
+      "top         F\n",
+      "freq      457\n",
+      "Name: GENDER, dtype: object\n",
+      "\n",
+      "Column: Education\n",
+      "count         1071\n",
+      "unique           6\n",
+      "top       Bachelor\n",
+      "freq           324\n",
+      "Name: Education, dtype: object\n",
+      "\n",
+      "Column: Customer Lifetime Value\n",
+      "count           1068\n",
+      "unique          1027\n",
+      "top       251459.20%\n",
+      "freq               4\n",
+      "Name: Customer Lifetime Value, dtype: object\n",
+      "\n",
+      "Column: Number of Open Complaints\n",
+      "count       1071\n",
+      "unique         6\n",
+      "top       1/0/00\n",
+      "freq         830\n",
+      "Name: Number of Open Complaints, dtype: object\n",
+      "\n",
+      "Column: Policy Type\n",
+      "count              1071\n",
+      "unique                3\n",
+      "top       Personal Auto\n",
+      "freq                780\n",
+      "Name: Policy Type, dtype: object\n",
+      "\n",
+      "Column: Vehicle Class\n",
+      "count              1071\n",
+      "unique                6\n",
+      "top       Four-Door Car\n",
+      "freq                576\n",
+      "Name: Vehicle Class, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute summary statistics for categorical columns \n",
+    "# and providing your conclusions based on these statistics.\n",
+    "\n",
+    "print(\"\\nSummary statistics for categorical columns:\")\n",
+    "for column in data.select_dtypes(include=['object']).columns:\n",
+    "    print(f\"\\nColumn: {column}\")\n",
+    "    print(data[column].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8deba741",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n",
+      "C:\\Users\\pauli\\AppData\\Local\\Temp\\ipykernel_14548\\1388568433.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  pd.to_datetime(data[column])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# provide suggestions for fixing any incorrect data types.\n",
+    "# For example, if a column representing dates is stored as a string,\n",
+    "# suggest converting it to a datetime format.\n",
+    "# Suggestions for fixing incorrect data types\n",
+    "for column in data.columns:\n",
+    "    if data[column].dtype == 'object':\n",
+    "        try:\n",
+    "            pd.to_datetime(data[column])\n",
+    "            print(f\"Suggestion: Convert column '{column}' to datetime format.\")\n",
+    "        except (ValueError, TypeError):\n",
+    "            pass\n",
+    "    elif data[column].dtype == 'int64' or data[column].dtype == 'float64':\n",
+    "        if data[column].nunique() < 10:\n",
+    "            print(f\"Suggestion: Consider converting column '{column}' to categorical type.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fbfb55d",
+   "metadata": {},
+   "source": [
+    "# **Estás aquí. Antes de seguir revisa tus códigos anteriores. Queda pendiente primero visualizar los uniques values de las columnas que tienen muchos unique values y que no se pueden ver todos, visualizar una por una en celda separada para mayor reconocimiento de la data. Después revisar datatype y describir cómo es y dar recomendaciones de transformación. Después revisa todos los códigos, algunos ponen que has de dar tu conclusion sobre las estadisticas del estado de la tada, etce. Revisa si los códigos cumple lo que pide el enunciado y avanza al   \n",
+    "     challenge 2."
    ]
   },
   {
@@ -237,7 +653,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
