--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -150,6 +150,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52bdd548",
+   "metadata": {},
+   "source": [
+    "> **Conclusion Dataset Dimensions:**\n",
+    ">\n",
+    "> The dataset contains 4,008 rows and 11 columns, which represents a medium-sized dataset.\n",
+    ">\n",
+    "> From a purely quantitative perspective, this size is appropriate for exploratory data analysis using pandas and does not present performance limitations.\n",
+    ">\n",
+    "> In principle, the number of rows appears sufficient to extract meaningful statistical insights and identify patterns. However, the reliability of these insights strongly depends on data quality. Issues such as inconsistent categorical values, missing data, incorrect data types, or outliers may reduce the validity of the results. Therefore, data cleaning and validation are necessary steps before drawing definitive conclusions or using the data for further analysis or modeling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "a67728d5",
