--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -862,6 +862,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edbdfc54",
+   "metadata": {},
+   "source": [
+    "This exploratory analysis focused on understanding the structure, distributions, and quality of the data. Several inconsistencies and data type issues were identified; however, no transformations were applied at this stage, as the objective of this challenge is limited to analysis and recommendations. The identified issues provide clear guidance for future data cleaning and preparation steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a703890-63db-4944-b7ab-95a4f8185120",
    "metadata": {},
    "source": [
