--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "2dca5073-4520-4f42-9390-4b92733284ed",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Top 5 less common customer locations:\n"
+      "Top 5 less common customer locations:\n",
+      "ST\n",
+      "AZ             25\n",
+      "WA             30\n",
+      "Washington     81\n",
+      "Nevada         98\n",
+      "Cali          120\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -916,7 +923,8 @@
     "\n",
     "customer_location_counts = data['ST'].value_counts(ascending=True)\n",
     "top_5_less_common_locations = customer_location_counts.head(5)\n",
-    "print(\"\\nTop 5 less common customer locations:\")"
+    "print(\"\\nTop 5 less common customer locations:\")\n",
+    "print(top_5_less_common_locations)\n"
    ]
   },
   {
