--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -929,6 +929,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b15960f",
+   "metadata": {},
+   "source": [
+    "> **Note on data consistency and interpretation:**\n",
+    ">\n",
+    ">\n",
+    "> The results above are derived directly from the raw dataset, without applying any data cleaning or standardization to the ST (state) variable. As identified in the exploratory analysis, this column contains inconsistencies such as multiple representations of the same state (e.g., abbreviations and full names).\n",
+    ">\n",
+    "> At this stage, the analysis intentionally uses the data as is, in accordance with the objective of this exercise.\n",
+    ">\n",
+    ">\n",
+    "> *Evaluation and potential risk*\n",
+    ">\n",
+    "> While the result correctly identifies the five least common customer locations based on the raw data, these inconsistencies may lead to fragmented counts and misleading geographic insights. States represented under different labels may appear less frequent than they actually are when aggregated correctly.\n",
+    "Therefore, conclusions drawn from this result should be interpreted with caution. For accurate location-based analysis and decision-making, value standardization should be applied in a subsequent data cleaning phase.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0ce80f43-4afa-43c7-a78a-c917444da4e0",
    "metadata": {},
    "source": [
@@ -949,12 +968,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "bcfad6c1-9af2-4b0b-9aa9-0dc5c17473c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total number of policies sold for each type of policy:\n",
+      "Policy Type\n",
+      "Personal Auto     780\n",
+      "Corporate Auto    234\n",
+      "Special Auto       57\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Policy type with the highest number of policies sold: Personal Auto\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "# The sales team wants to know the total number of policies sold for each type of policy.\n",
+    "# Create a pandas Series object that contains the policy types and their total number of policies sold\n",
+    "# and then retrieve the policy type with the highest number of policies sold.\n",
+    "# Using value_counts() method simplifies this analysis\n",
+    "# Futhermore, there is a method that returns the index of the maximum value in a column or row\n",
+    "\n",
+    "policy_type_counts = data['Policy Type'].value_counts()\n",
+    "most_sold_policy_type = policy_type_counts.idxmax()\n",
+    "print(\"\\nTotal number of policies sold for each type of policy:\")\n",
+    "print(policy_type_counts)\n",
+    "print(f\"\\nPolicy type with the highest number of policies sold: {most_sold_policy_type}\")\n"
    ]
   },
   {
