--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "0c0563cf-6f8b-463d-a321-651a972f82e5",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average income for Personal Auto customers: 38180.69871794872\n"
+      "Average income for Personal Auto customers: 38180.69871794872\n",
+      "Average income for Corporate Auto customers: 41390.31196581197\n"
      ]
     }
    ],
@@ -1064,7 +1065,8 @@
     "corporate_auto = data.loc[data['Policy Type'] == 'Corporate Auto']\n",
     "avg_income_personal = personal_auto['Income'].mean()\n",
     "avg_income_corporate = corporate_auto['Income'].mean()\n",
-    "print(f\"\\nAverage income for Personal Auto customers: {avg_income_personal}\")\n"
+    "print(f\"\\nAverage income for Personal Auto customers: {avg_income_personal}\")\n",
+    "print(f\"Average income for Corporate Auto customers: {avg_income_corporate}\")\n"
    ]
   },
   {
