--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -1009,7 +1009,7 @@
    "id": "73697aaa",
    "metadata": {},
    "source": [
-    "> **Insight:**\n",
+    "> **Note:**\n",
     ">\n",
     "> The results show that Personal Auto is by far the most common policy type, accounting for the majority of policies sold. Corporate Auto and Special Auto policies represent a significantly smaller portion of the dataset.\n",
     ">\n",
@@ -1071,6 +1071,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39cec276",
+   "metadata": {},
+   "source": [
+    "> **Note:**\n",
+    ">\n",
+    "> The results indicate that customers with Corporate Auto policies have a higher average income than those with Personal Auto policies. This suggests that corporate policyholders tend to belong to higher-income segments. However, this comparison is based on raw data and does not account for potential outliers or zero-income values, which may influence the average."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "80b16c27-f4a5-4727-a229-1f88671cf4e2",
    "metadata": {},
    "source": [
@@ -1111,12 +1121,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b731bca6-a760-4860-a27b-a33efa712ce0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Customers with high policy claim amounts (greater than 75th percentile):\n",
+      "     Customer          ST GENDER Education Customer Lifetime Value   Income  \\\n",
+      "1     QZ44356     Arizona      F  Bachelor              697953.59%      0.0   \n",
+      "2     AI49188      Nevada      F  Bachelor             1288743.17%  48767.0   \n",
+      "17    OE15005        Cali    NaN   College              394524.16%  28855.0   \n",
+      "23    TZ98966      Nevada    NaN  Bachelor              245019.10%      0.0   \n",
+      "26    US89481  California    NaN  Bachelor              394637.21%      0.0   \n",
+      "...       ...         ...    ...       ...                     ...      ...   \n",
+      "1059  YG44474      Oregon      M   College             1401472.13%  54193.0   \n",
+      "1061  RY92647        Cali      F  Bachelor             1050677.17%      0.0   \n",
+      "1068  GS98873     Arizona      F  Bachelor              323912.47%  16061.0   \n",
+      "1069  CW49887  California      F    Master              462680.11%  79487.0   \n",
+      "1070  MY31220  California      F   College              899704.02%  54230.0   \n",
+      "\n",
+      "      Monthly Premium Auto Number of Open Complaints     Policy Type  \\\n",
+      "1                     94.0                    1/0/00   Personal Auto   \n",
+      "2                    108.0                    1/0/00   Personal Auto   \n",
+      "17                   101.0                    1/0/00   Personal Auto   \n",
+      "23                    73.0                    1/3/00  Corporate Auto   \n",
+      "26                   111.0                    1/0/00   Personal Auto   \n",
+      "...                    ...                       ...             ...   \n",
+      "1059                 117.0                    1/0/00  Corporate Auto   \n",
+      "1061                  92.0                    1/0/00   Personal Auto   \n",
+      "1068                  88.0                    1/0/00   Personal Auto   \n",
+      "1069                 114.0                    1/0/00    Special Auto   \n",
+      "1070                 112.0                    1/0/00   Personal Auto   \n",
+      "\n",
+      "      Vehicle Class  Total Claim Amount  \n",
+      "1     Four-Door Car         1131.464935  \n",
+      "2      Two-Door Car          566.472247  \n",
+      "17              SUV          647.442031  \n",
+      "23    Four-Door Car          554.376763  \n",
+      "26    Four-Door Car          799.200000  \n",
+      "...             ...                 ...  \n",
+      "1059            SUV          720.752945  \n",
+      "1061  Four-Door Car          546.524896  \n",
+      "1068  Four-Door Car          633.600000  \n",
+      "1069            SUV          547.200000  \n",
+      "1070   Two-Door Car          537.600000  \n",
+      "\n",
+      "[264 rows x 11 columns]\n",
+      "\n",
+      "Summary statistics for high policy claim amounts:\n",
+      "             Income  Monthly Premium Auto  Total Claim Amount\n",
+      "count    264.000000            264.000000          264.000000\n",
+      "mean   23677.344697            165.193182          782.228263\n",
+      "std    27013.483721            623.930992          292.751640\n",
+      "min        0.000000             63.000000          537.600000\n",
+      "25%        0.000000             99.000000          606.521741\n",
+      "50%    18807.000000            114.000000          679.597985\n",
+      "75%    42423.750000            133.250000          851.400000\n",
+      "max    99316.000000          10202.000000         2893.239678\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "\n",
+    "# Your goal is to identify customers with a high policy claim amount.\n",
+    "# Review again the statistics for total claim amount to gain an understanding of the data.\n",
+    "# To identify potential areas for improving customer retention and profitability, we want to focus on customers with a high policy claim amount.\n",
+    "# Consider customers with a high policy claim amount to be those in the top 25% of the total claim amount.\n",
+    "# Create a pandas DataFrame object that contains information about customers with a policy claim amount greater than the 75th percentile.\n",
+    "# Use DataFrame methods to calculate summary statistics about the high policy claim amount data. \n",
+    "# Use method that gives you the percentile or quantile 0.75 and 0.25 for a Pandas Series.\n",
+    "\n",
+    "quantile_75 = data['Total Claim Amount'].quantile(0.75)\n",
+    "high_claims = data.loc[data['Total Claim Amount'] > quantile_75]\n",
+    "print(\"\\nCustomers with high policy claim amounts (greater than 75th percentile):\")\n",
+    "print(high_claims)\n",
+    "print(\"\\nSummary statistics for high policy claim amounts:\")\n",
+    "print(high_claims.describe())\n"
    ]
   }
  ],
