--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -1203,6 +1203,16 @@
     "print(\"\\nSummary statistics for high policy claim amounts:\")\n",
     "print(high_claims.describe())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52b57992",
+   "metadata": {},
+   "source": [
+    "> **Note:**\n",
+    ">\n",
+    "> The analysis above is based on the raw dataset. Previously identified data quality issues (e.g., inconsistent categorical values and numerical fields stored as text) have not been addressed at this stage. While the results correctly identify the top 25% of customers by claim amount, further data cleaning may be required before drawing operational or strategic conclusions."
+   ]
   }
  ],
  "metadata": {
